--- a/strategy/singleton/js/index.html
+++ b/strategy/singleton/js/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
-     <script src="strategy.js"></script>
 </head>
+
 <body>
      <h1>Strategy</h1>
+     <div>
+          <select id="slcOptions">
+               <option value="0">Lista</option>
+               <option value="1">Lista con detalle</option>
+          </select>
+     </div>
+
+     <div id="content">
+
+     </div>
+     <script src="strategy.js"></script>
 </body>
+
 </html>
